--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
             </div>
         </section>
 
-        <section class="testimonial section" id="research">
+        <!-- <section class="testimonial section" id="research">
             <h2 class="section__title">Research</h2>
             <span class="section__subtitle">My research publications, conference contributions, & patents</span>
 
@@ -769,8 +769,7 @@
                             <div class="testimonial__header">
 
                                 <div>
-                                    <h3 class="testimonial__name">Advancing Pediatric Brain Mapping: An AI-Driven
-                                        Adaptive Functional MRI Pipeline for Mapping of Functional Networks</h3>
+                                    <h3 class="testimonial__name">PTSD and Machine learning paper</h3>
                                     <span class="testimonial__client">Conference: Radiological Society of North America
                                         (RSNA), 2024<br>
                                         Link: To be updated<br>
@@ -1031,7 +1030,7 @@
                 <div class="swiper-pagination swiper-pagination-testimonial"></div>
             </div>
 
-        </section>
+        </section> -->
 
         <section class="portfolio section" id="projects">
             <h2 class="section__title">Projects</h2>
